fix gin and added generic example for test purposes
